--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <link rel="canonical"; href="https://leafware.club">
     <title>leafware</title>
   </head>
-  <body style="               background-color:#343434;">
+  <body style=""; background-color:#343434;">
     <table style="width: 100%;" border="0">
       <tbody>
         <tr>
