--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="canonical"; href="https://leafware.club">
     <title>leafware</title>
   </head>
-  <body style=""; background-color:#343434;">
+  <body style="background-color:#343434;">
     <table style="width: 100%;" border="0">
       <tbody>
         <tr>
