--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <link rel="canonical"; href="https://leafware.club">
+    <link rel="canonical" href="https://leafware.club";>
     <title>leafware</title>
   </head>
   <body style="background-color:#343434;">
