--- a/about.htm
+++ b/about.htm
@@ -5,7 +5,7 @@
 
     <h1 id="links">
 
-        <a href="index.htm" class="link">← Go Back</a>
+        <a href="index.html" class="link">← Go Back</a>
 
     </h1>
 
